# twitter-korean-py

./: .travis.yml  AUTHORS  README.md  README.rst  circle.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
spec/: KoreanNormalizerTest.py
twitter_korean/: __init__.py  _setup_hooks.py
twitter_korean/normalizer/: KoreanNormalizer.py
twitter_korean/util/: KoreanDictionaryProvider.py  KoreanPos.py
