[metadata]
name = twitter_korean-py
version = 0.1
summary = Python port to the normalizer in https://github.com/twitter/twitter-korean-text
description-file =
    README.md
author = Baeg-il Kim
author-email = cedar101@gmail.com
home-page = https://github.com/cedar101/twitter_korean-py
keywords =
    twkorean
    twitter-korean
    twitter-korean-py
    twitter-korean-text
    morphological analyzer
    morphology
    analyzer
    Korean
    Korean language
    tokenizer
    NLP
    natural language processing
    natural language interface to database
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: Korean
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache License
# setup_requires =
#     six
#     future
#     maven-artifact

[files]
packages =
    twitter_korean
package-data =
    twitter_korean = com/twitter/penguin/korean/util/*/*
data-files =
    twitter_korean/data = com/twitter/penguin/korean/util/*/*
#data_files =
#    share/twitter-korean-py/dict = com/twitter/penguin/korean/util/*/*

[pbr]
warnerrors = True

[wheel]
universal = 1

[global]
commands =
    twitter_korean._setup_hooks.DownloadJarCommand
    twitter_korean._setup_hooks.TestCommand

[build_py]
pre-hook.build_py_pre_hook = twitter_korean._setup_hooks.download_jar

[develop]
pre-hook.develop_pre_hook = twitter_korean._setup_hooks.download_jar

[install_data]
pre-hook.install_data_pre_hook = twitter_korean._setup_hooks.download_jar

# [install]
# pre-hook.install_pre_hook = twitter_korean._setup_hooks.download_jar

[backwards_compat]
use_2to3 = True
zip_safe = False
include_package_data = True
tests_require = True
dependency_links =
    git+https://github.com/hamnis/maven-artifact.git@0.1.4#egg=maven-artifact-0.1.4
